# deep-python-client

./: .flake8  .flake8.ini  .gitignore  CHANGELOG.md  LICENSING.md  Makefile  README.md  dev-requirements.txt  mkdocs.yml  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: docker_example.yml  it_tests.yaml  on_push.yaml  on_release.yml  pages.yml
dev/: README.md
dev/test-server/src/test-server/: server.py
dev/test-server/src/test_server/: __init__.py
docs/: index.md
docs/config/: config.md
examples/: README.md
examples/simple-app-custom-logging/src/simple-app/: logging.conf  main.py
examples/simple-app-docker/: Dockerfile  requirements.txt
examples/simple-app-docker/src/simple-app/: base_test.py  main.py  simple_test.py
examples/simple-app-metrics/src/simple-app/: base_test.py  main.py  simple_test.py
examples/simple-app-otel/src/simple-app/: main.py  simple_test.py
examples/simple-app/src/simple-app/: base_test.py  main.py  simple_test.py
scripts/: gendocs.py
src/deep/: __init__.py  thread_local.py  utils.py  version.py
src/deep/api/: __init__.py  deep.py  types.py
src/deep/api/attributes/: __init__.py
src/deep/api/auth/: __init__.py
src/deep/api/plugin/: __init__.py  otel.py  python.py
src/deep/api/plugin/metric/: __init__.py  otel_metrics.py  prometheus_metrics.py
src/deep/api/plugin/span/: __init__.py
src/deep/api/resource/: __init__.py
src/deep/api/tracepoint/: __init__.py  constants.py  eventsnapshot.py  tracepoint_config.py  trigger.py
src/deep/config/: __init__.py  config_service.py  tracepoint_config.py
src/deep/grpc/: __init__.py  grpc_service.py
src/deep/logging/: __init__.py  logging.conf  tracepoint_logger.py
src/deep/poll/: __init__.py  poll.py
src/deep/processor/: __init__.py  frame_collector.py  frame_config.py  frame_processor.py  trigger_handler.py  variable_processor.py  variable_set_processor.py
src/deep/processor/bfs/: __init__.py
src/deep/processor/context/: __init__.py  action_context.py  action_results.py  callback_context.py  log_action.py  metric_action.py  snapshot_action.py  span_action.py  trigger_context.py
src/deep/push/: __init__.py  push_service.py
src/deep/task/: __init__.py
test/test_deep/auth/: test_auth.py
test/test_deep/config/: __init__.py  test_config.py  test_config_service.py
test/test_deep/grpc/: __init__.py  test_grpc.py
test/test_deep/processor/: __init__.py  test_log_messages.py  test_variable_processor.py
test/test_deep/tracepoint/: test_tracepoint_config.py
tests/: test_utils.py  utils.py
tests/deep_tests/: test_deep.py
tests/deep_tests/processor/: test_trigger_handler.py  test_variable_processor.py
tests/deep_tests/processor/context/: test_log_action.py
tests/deep_tests/tracepoint/: test_tracepoint_config.py
tests/it_tests/: __init__.py  it_test_basic.py  it_utils.py  test_it_basic.py  test_target.py
tests/unit_tests/: test_deep.py  test_target.py  test_utils.py
tests/unit_tests/api/attributes/: __init__.py  test_attributes.py
tests/unit_tests/api/plugin/: test_otel.py  test_plugin.py  test_python.py
tests/unit_tests/api/plugin/metrics/: test_otel_metrics.py  test_prometheus_metrics.py
tests/unit_tests/api/resource/: test_resource.py
tests/unit_tests/auth/: test_auth.py
tests/unit_tests/config/: test_config.py  test_config_service.py  test_tracepoint_config.py
tests/unit_tests/grpc/: __init__.py  test_grpc.py
tests/unit_tests/poll/: test_poll.py
tests/unit_tests/processor/: __init__.py  test_log_messages.py  test_trigger_handler.py
tests/unit_tests/processor/context/: test_log_action.py  test_metric_action.py
tests/unit_tests/push/: test_push.py  test_push_service.py
tests/unit_tests/task/: test_task.py
tests/unit_tests/tracepoint/: test_trigger.py
