[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deep-agent"
description = "DEEP Python Agent"
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">3.7"
authors = [
    { name = "Intergral GmbH", email = "support@intergral.com" },
    { name = "Ben Donnelly", email = "b.w.donnelly1@gmail.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Typing :: Typed",
]
dynamic = [
    "version",
    "dependencies"
]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/deep"]


[tool.hatch.version]
path = "src/deep/version.py"

# read dependencies from reuirements.txt
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
