[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deep-agent"
description = "DEEP Python Agent"
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">3.7"
authors = [
    { name = "Intergral GmbH", email = "support@intergral.com" },
    { name = "Ben Donnelly", email = "b.w.donnelly1@gmail.com" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dynamic = [
    "version",
]

dependencies = [
    "grpcio>=1.51.3",
    "deep-proto>=1.0.5",
    "protobuf>=3.20.3"
]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/deep"]

# read version from version.py file
[tool.hatch.version]
path = "src/deep/version.py"

[tool.pytest.ini_options]
pythonpath = [
    "./src",
    "./tests"
]

[tool.coverage.report]
exclude_lines = [
    "if TYPE_CHECKING:",
    "@abc.abstractmethod"
]
